--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "neos/eel": "^5.0 || ^6.0 || ^7.0 || ^8.0 || dev-master",
         "neos/flow": "^5.0 || ^6.0 || ^7.0 || ^8.0 || dev-master",
         "neos/fusion": "^4.0 || ^5.0 || ^7.0 || ^8.0 || dev-master",
-        "neos/neos": "^4.0 || ^5.0 || ^7.0 || ^8.0 || dev-master"
+        "neos/neos": "^4.0 || ^5.0 || ^7.0 || ^8.0 || ^9.0 || dev-master"
     },
     "conflict": {
         "flowpack/elasticsearch-contentrepositoryadaptor": "<7.0.0"
